Set resolution to Luchok

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
-set(LIBNAME libretrocore)
-project(${LIBNAME} LANGUAGES C CXX VERSION 1.0.1 DESCRIPTION "Libretro core")
+set(LIBNAME luchok_libretro)
+project(${LIBNAME} LANGUAGES C CXX VERSION 1.0.1 DESCRIPTION "Luchok fantasy console, Libretro core")
+set(CMAKE_SHARED_LIBRARY_PREFIX )
 
 add_library(${LIBNAME} SHARED 
     src/libretro.cpp
