--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,47 @@ set(LIBNAME luchok_libretro)
 project(${LIBNAME} LANGUAGES C CXX VERSION 1.0.1 DESCRIPTION "Luchok fantasy console, Libretro core")
 set(CMAKE_SHARED_LIBRARY_PREFIX )
 
+set(LUA_DIR vendor/lua)
+set(LUA_SRC
+    ${LUA_DIR}/lapi.c
+    ${LUA_DIR}/lcode.c
+    ${LUA_DIR}/lctype.c
+    ${LUA_DIR}/ldebug.c
+    ${LUA_DIR}/ldo.c
+    ${LUA_DIR}/ldump.c
+    ${LUA_DIR}/lfunc.c
+    ${LUA_DIR}/lgc.c
+    ${LUA_DIR}/llex.c
+    ${LUA_DIR}/lmem.c
+    ${LUA_DIR}/lobject.c
+    ${LUA_DIR}/lopcodes.c
+    ${LUA_DIR}/lparser.c
+    ${LUA_DIR}/lstate.c
+    ${LUA_DIR}/lstring.c
+    ${LUA_DIR}/ltable.c
+    ${LUA_DIR}/ltm.c
+    ${LUA_DIR}/lundump.c
+    ${LUA_DIR}/lvm.c
+    ${LUA_DIR}/lzio.c
+    ${LUA_DIR}/lauxlib.c
+    ${LUA_DIR}/lbaselib.c
+    ${LUA_DIR}/lcorolib.c
+    ${LUA_DIR}/ldblib.c
+    ${LUA_DIR}/liolib.c
+    ${LUA_DIR}/lmathlib.c
+    ${LUA_DIR}/loslib.c
+    ${LUA_DIR}/lstrlib.c
+    ${LUA_DIR}/ltablib.c
+    ${LUA_DIR}/lutf8lib.c
+    ${LUA_DIR}/loadlib.c
+    ${LUA_DIR}/linit.c
+)
+
+add_library(lua STATIC ${LUA_SRC})
+
+target_compile_definitions(lua PRIVATE LUA_COMPAT_5_4)
+target_include_directories(lua INTERFACE vendor/lua)
+
 add_library(${LIBNAME} SHARED 
     src/libretro.cpp
     )
@@ -10,5 +51,5 @@ set_target_properties(${LIBNAME} PROPERTIES
     SOVERSION 1
     PUBLIC_HEADER src/libretro.h
     LINKER_LANGUAGE CXX)
-#target_link_libraries(${LIBNAME} )
+target_link_libraries(${LIBNAME} lua)
 target_include_directories(${LIBNAME} PUBLIC src)
